# cmi-ffmpeg-server

./: Cargo.toml  Dockerfile
.github/workflows/: release.yaml
src/: main.rs
src/routers/: ffmpeg.rs  health.rs
